--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,10 @@
 	"description": "A fuzzy searching omnibar for Chrome",
 
 	"browser_action": {
-		// "default_icon": {
-		// 	"19": "",
-		// 	"38": ""
-		// },
+		"default_icon": {
+			"19": "/img/icon19.png",
+			"38": "/img/icon38.png"
+		},
 		"default_title": "bartender",
 		"default_popup": "/html/popup.html"
 	},
@@ -34,6 +34,11 @@
 	// 		}
 	// 	}
 	// },
+	"icons": {
+		"16": "/img/icon16.png",
+		"48": "/img/icon48.png",
+		"128": "/img/icon128.png"
+	},
 	"incognito": "split",
 	"offline_enabled": true,
 	"permissions": [
